--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -59,6 +59,10 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/py-v')
+    environment: pypi-publish
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - name: Checkout code
@@ -70,15 +74,13 @@ jobs:
           python-version: '3.11'
 
       - name: Install build tools
-        run: pip install build twine
+        run: pip install build
 
       - name: Build package
         working-directory: ./python
         run: python -m build
 
       - name: Publish to PyPI
-        working-directory: ./python
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-        run: twine upload dist/*
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: python/dist/
