Add tag triggers to workflows

--- a/.github/workflows/javascript-ci.yml
+++ b/.github/workflows/javascript-ci.yml
@@ -3,6 +3,8 @@ name: JavaScript SDK CI
 on:
   push:
     branches: [ main, develop ]
+    tags:
+      - 'js-v*'
     paths:
       - 'javascript/**'
       - '.github/workflows/javascript-ci.yml'
