--- a/.github/workflows/javascript-ci.yml
+++ b/.github/workflows/javascript-ci.yml
@@ -3,8 +3,6 @@ name: JavaScript SDK CI
 on:
   push:
     branches: [ main, develop ]
-    tags:
-      - 'js-v*'
     paths:
       - 'javascript/**'
       - '.github/workflows/javascript-ci.yml'
@@ -58,7 +56,7 @@ jobs:
     name: Publish to npm
     needs: test
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/js-v')
+    if: github.ref == 'refs/heads/main'
     environment: npm-publish
     permissions:
       id-token: write
@@ -67,24 +65,47 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Check if version changed
+        id: version-check
+        run: |
+          CURRENT_VERSION=$(node -p "require('./javascript/package.json').version")
+          git checkout HEAD^
+          PREVIOUS_VERSION=$(node -p "require('./javascript/package.json').version")
+          git checkout -
+
+          if [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ]; then
+            echo "Version changed from $PREVIOUS_VERSION to $CURRENT_VERSION"
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "Version unchanged: $CURRENT_VERSION"
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Setup Node.js
+        if: steps.version-check.outputs.changed == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
 
       - name: Update npm
+        if: steps.version-check.outputs.changed == 'true'
         run: npm install -g npm@latest
 
       - name: Install dependencies
+        if: steps.version-check.outputs.changed == 'true'
         working-directory: ./javascript
         run: npm ci
 
       - name: Build package
+        if: steps.version-check.outputs.changed == 'true'
         working-directory: ./javascript
         run: npm run build
 
       - name: Publish to npm
+        if: steps.version-check.outputs.changed == 'true'
         working-directory: ./javascript
         run: npm publish --provenance --access public
