--- a/javascript/package.json
+++ b/javascript/package.json
@@ -24,7 +24,7 @@
     "prepublishOnly": "npm run clean && npm run build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src --ext .ts --config .eslintrc.js",
     "type-check": "tsc --noEmit"
   },
   "keywords": [
