--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -49,6 +49,8 @@ dev = [
 [tool.ruff]
 line-length = 88
 target-version = "py38"
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "B", "C4", "UP"]
 ignore = ["B008", "B024", "B026", "E501", "F402", "F403", "F405", "F841"]
 
