--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -81,50 +81,90 @@ jobs:
     environment: pypi-publish
     permissions:
       id-token: write
-      contents: read
+      contents: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Check if version changed
+      - name: Install tomlkit
+        run: pip install tomlkit
+
+      - name: Check for SDK changes and auto-bump version
         id: version-check
         run: |
-          # Use Python to parse TOML instead of fragile grep regex
-          CURRENT_VERSION=$(python -c "import tomllib; print(tomllib.load(open('python/pyproject.toml', 'rb'))['project']['version'])")
-          PREVIOUS_VERSION=$(git show HEAD^:python/pyproject.toml | python -c "import tomllib, sys; print(tomllib.load(sys.stdin.buffer)['project']['version'])")
+          cd python
 
-          if [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ]; then
-            echo "Version changed from $PREVIOUS_VERSION to $CURRENT_VERSION"
-            echo "changed=true" >> $GITHUB_OUTPUT
-            echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+          # Get current version
+          CURRENT_VERSION=$(python -c "import tomllib; print(tomllib.load(open('pyproject.toml', 'rb'))['project']['version'])")
+
+          # Check if there are changes to SDK code or dependencies
+          # Check: nebula/ source, tests/, or pyproject.toml (excluding version field)
+          git diff HEAD^ HEAD -- ../python/nebula ../python/tests > /tmp/code_changes.diff
+
+          # Check for pyproject.toml changes excluding just the version line
+          git show HEAD^:python/pyproject.toml > /tmp/prev_pyproject.toml
+          python -c "
+import tomllib
+prev = tomllib.load(open('/tmp/prev_pyproject.toml', 'rb'))
+curr = tomllib.load(open('pyproject.toml', 'rb'))
+prev['project'].pop('version', None)
+curr['project'].pop('version', None)
+import sys
+sys.exit(0 if prev == curr else 1)
+          " && TOML_CHANGED=false || TOML_CHANGED=true
+
+          if [ ! -s /tmp/code_changes.diff ] && [ "$TOML_CHANGED" = "false" ]; then
+            echo "No SDK changes detected"
+            echo "should_publish=false" >> $GITHUB_OUTPUT
           else
-            echo "Version unchanged: $CURRENT_VERSION"
-            echo "changed=false" >> $GITHUB_OUTPUT
+            echo "SDK changes detected, auto-bumping patch version"
+
+            # Parse version and bump patch
+            IFS='.' read -r major minor patch <<< "$CURRENT_VERSION"
+            NEW_VERSION="${major}.${minor}.$((patch + 1))"
+
+            echo "Bumping version from $CURRENT_VERSION to $NEW_VERSION"
+
+            # Update version in pyproject.toml
+            python -c "import tomlkit; d=tomlkit.parse(open('pyproject.toml').read()); d['project']['version']='$NEW_VERSION'; open('pyproject.toml','w').write(tomlkit.dumps(d))"
+
+            # Configure git
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+
+            # Commit version bump
+            git add pyproject.toml
+            git commit -m "chore(python): bump version to $NEW_VERSION [skip ci]"
+            git push
+
+            echo "should_publish=true" >> $GITHUB_OUTPUT
+            echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
           fi
 
       - name: Download build artifacts
-        if: steps.version-check.outputs.changed == 'true'
+        if: steps.version-check.outputs.should_publish == 'true'
         uses: actions/download-artifact@v4
         with:
           name: python-dist
           path: python/dist/
 
       - name: Publish to PyPI
-        if: steps.version-check.outputs.changed == 'true'
+        if: steps.version-check.outputs.should_publish == 'true'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: python/dist/
 
       - name: Create release tag
-        if: steps.version-check.outputs.changed == 'true'
+        if: steps.version-check.outputs.should_publish == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
