--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -147,10 +147,17 @@ jobs:
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
 
-            # Commit version bump
+            # Commit and push version bump with retry
             git add pyproject.toml
             git commit -m "chore(python): bump version to $NEW_VERSION [skip ci]"
-            git push
+
+            # Pull with rebase and push (retry up to 3 times)
+            for i in {1..3}; do
+              git pull --rebase origin main && git push && break || {
+                echo "Push attempt $i failed, retrying..."
+                sleep 2
+              }
+            done
 
             echo "should_publish=true" >> $GITHUB_OUTPUT
             echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
