--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -81,7 +81,7 @@ jobs:
     environment: pypi-publish
     permissions:
       id-token: write
-      contents: read
+      contents: write  # Required to push git tags
 
     steps:
       - name: Checkout code
